project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
  namespace: todo-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: shared-log-output
          persistentVolumeClaim:
            claimName: dwk-pv-claim
      containers:
        - name: project
          image: jhirvioja/project-todo-frontend:0.0.7
          volumeMounts:
            - name: shared-log-output
              mountPath: /usr/src/app/files
        - name: project-todo-backend
          image: jhirvioja/project-todo-backend:0.0.3
