project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
  namespace: todo-project
spec:
  type: ClusterIP
  selector:
    app: project
  ports:
    - name: port1
      port: 2345
      protocol: TCP
      targetPort: 3000
    - name: port2
      port: 5678
      protocol: TCP
      targetPort: 3001
