project/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-frontend-svc
spec:
  type: NodePort
  selector:
    app: project
  ports:
    - name: frontend-port
      port: 80
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: ClusterIP
  selector:
    app: project
  ports:
    - name: backend-port
      port: 5678
      protocol: TCP
      targetPort: 3001
