project/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: psql-stset
  namespace: todo-project
spec:
  serviceName: psql-svc
  replicas: 1
  selector:
    matchLabels:
      app: psqlapp
  template:
    metadata:
      labels:
        app: psqlapp
    spec:
      containers:
        - name: psql
          image: postgres
          ports:
            - name: psql
              containerPort: 5432
          volumeMounts:
            - name: psql-data-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: psql-data-storage
      spec:
        accessModes: ["ReadOnlyMany"]
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: psql-svc
  namespace: todo-project
  labels:
    app: psql
spec:
  ports:
    - port: 5432
      name: web
  clusterIP: None
  selector:
    app: psqlapp
